bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on that page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* link in libpam to libpam_misc - since the latter uses functions in
  the former it makes some sort of sense to do this (although, in the
  static library case, I remain to be convinced). (Bug 565470 -
  agmorgan).
* absorbed some of the proposed darwin (OS X) changes from Luke Howard
  (of PADL software) - hopefully will get the rest (see Rob Braun's
  534205) by 0.77 (Bug 491466 - agmorgan).
* README fix for pam_unix from Nalin (Bug 476971 - agmorgan).
* add support for building pdf files from the documentation - request
  from 'lolive' (Bug 471377 - agmorgan).
* documented the equivalent '[..]' expressions for "required"
  etc. Request from Ross Patterson (Bug 529078 - agmorgan).
* '[...]' parsing: document it and also fix it to support '\]' escape
  sequence. Feature request from Russell Kliese (Bug 517064 -
  agmorgan).
* pam_rootok: compilation warning noted by Tony den Haan wrt no
  prototype for strcmp() (Bug 557322 - agmorgan).
* documentation: (a few of mine in passing) and app documentation
  suggestions regarding PAM environment variables and module
  documentation changes regarding the conversation function from Jenn
  Vesperman (Bug 527821, 527965 - agmorgan)
* documentation: pam_time.sgml typo fixed, pam_motd exists now,
  correct Red Hat comment about config files (Bugs 554274, 554261,
  554182 - agmorgan)
* pam_limits: added '%' domain for maxlogins limiting, now '*' and @group
  have the old meaning (every) and '%' the new one (all)
  (Bug 533664 - baggins)
* pam_limits: put not so interesting log messages under debug arg
  (Bug 533668 - baggins)
* pam_access: added the 'fieldsep=' argument (Bug 547051 - agmorgan),